--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@
 # Editors
 .vscode
 .idea
+
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/*.pem
+###< lexik/jwt-authentication-bundle ###
