--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -37,6 +37,7 @@ security:
     access_control:
         - { path: ^/api/login_check, roles: PUBLIC_ACCESS }
         - { path: ^/api/writer/, roles: [ROLE_USER, USER_ADMIN] }
+        - { path: ^/api/auth/, roles: [ROLE_USER, USER_ADMIN] }
         - { path: ^/api/admin/, roles: ROLE_ADMIN }
         - { path: ^/api, roles: PUBLIC_ACCESS}
 
