--- a/.env
+++ b/.env
@@ -17,14 +17,14 @@
 APP_ENV=dev
 APP_SECRET=43336fa3629370291d8cfd3b702f8be8
 ###< symfony/framework-bundle ###
-DATABASE_URL="mysql://root:@127.0.0.1:3306/pg_afterwork"
+DATABASE_URL="mysql://user:user@127.0.0.1:3306/pg_afterwork"
 
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/pg_afterwork"
+DATABASE_URL="mysql://user:user@127.0.0.1:3306/pg_afterwork"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
@@ -33,7 +33,7 @@ CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
 
 ###> lexik/jwt-authentication-bundle ###
-JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
-JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_SECRET_KEY=%kernel.project_dir%/app/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/app/config/jwt/public.pem
 JWT_PASSPHRASE=146a923743692abbfb64fc754546d44b
 ###< lexik/jwt-authentication-bundle ###
