--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -37,7 +37,7 @@ security:
     access_control:
         - { path: ^/api/login_check, roles: PUBLIC_ACCESS }
         - { path: ^/api/writer/, roles: PUBLIC_ACCESS }
-        - { path: ^/api/auth/, roles: PUBLIC_ACCESS }
+        - { path: ^/api/auth/, roles: [ROLE_ADMIN, ROLE_WRITER] }
         - { path: ^/api/admin/, roles: PUBLIC_ACCESS }
         - { path: ^/api, roles: PUBLIC_ACCESS}
 
